infra/manifests/api-gateway-app.yaml
#  must be deployed as a deployment | max replication: 3 min replication: 1 CPU percent trigger: 60%
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-app
spec:
  type: ClusterIP
  selector:
    app: api-gateway-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      restartPolicy: Always
      containers:
        - name: api-gateway-app
          image: triangle123321/cloud-design-gateway-app:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
