infra/manifests/billing-app.yaml
# Must be StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: billing-app
spec:
  selector:
    app: billing-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: billing-app
spec:
  serviceName: "billing-app"
  replicas: 1
  selector:
    matchLabels:
      app: billing-app
  template:
    metadata:
      labels:
        app: billing-app
    spec:
      containers:
        - name: billing-app
          image: triangle123321/cloud-design-billing-app:latest
          ports:
            - containerPort: 8080
