infra/manifests/inventory-app.yaml
# must be deployed as a deployment | max replication: 3 min replication: 1 CPU percent trigger: 60%

apiVersion: v1
kind: Service
metadata:
  name: inventory-app
spec:
  selector:
    app: inventory-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-app
  template:
    metadata:
      labels:
        app: inventory-app
    spec:
      restartPolicy: Always
      containers:
        - name: inventory-app
          image: triangle123321/cloud-design-inventory-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
