infra/manifests/inventory-db.yaml
# must be deployed as StatefulSet
apiVersion: v1
kind: Service
metadata:
  name: inventory-db
spec:
  selector:
    app: inventory-db
  ports:
    - name: inventory-db
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inventory-db
spec:
  serviceName: "inventory-database"
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
        - name: inventory-db
          image: triangle123321/cloud-design-db:v1.0
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: inventory-database
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: inventory-database
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
        storageClassName: gp2
