infra/manifests/rabbit-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-queue
spec:
  selector:
    app: rabbit-queue
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbit-queue
spec:
  serviceName: "rabbit-queue"
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-queue
  template:
    metadata:
      labels:
        app: rabbit-queue
    spec:
      containers:
        - name: rabbit-queue
          image: triangle123321/cloud-design-queue:v1.0
          ports:
            - containerPort: 5672
              protocol: TCP
          volumeMounts:
            - name: rabbit-queue
              mountPath: /var/lib/rabbit-queue/data
  volumeClaimTemplates:
    - metadata:
        name: rabbit-queue
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Mi
        storageClassName: gp2
